[package]
name = "opcua_ros2_bridge"
version = "0.1.0"
authors = ["Martin Dahl <martin.dahl@gmail.com>"]
edition = "2018"

# We use a custom profile to keep colcon
# separate from "normal" rust building.
[profile.colcon]
inherits = "release"

[dependencies]
r2r = "0.7.0"
futures = "0.3.15"
tokio = { version = "1", features = ["full"] }
opcua-client = {git = "https://github.com/kristoferb/opcua", branch = "0.8.1"}
serde_json = "1.0"
